# fun

./: README.md
06062024/: Makefile  README.md  block_or_not.py  task_2.py  task_3.py
06062024_pg_locks_and_space_invaders/: generic_setup.py  task_1.py
09102024_michal_leaving_game/JavaScript!/: README.md  govuk-frontend.min.css  javascript_game_version.html  package-lock.json  package.json  something.html
09102024_michal_leaving_game/Python!/: README.md  pacman.py
18072024/derec/: __main__.py
18072024/derec/data/: WhiskeyExports.csv
18072024_G7_whiskey_interview_task/: pyproject.toml
18072024_G7_whiskey_interview_task/derec/: exporters.py
18072024_G7_whiskey_interview_task/derec/data/: Countries.csv
data-engineer-derec/: README.md  pyproject.toml
data-engineer-derec/derec/: __init__.py  __main__.py
data-engineer-derec/derec/data/: GdpGrowthRates.csv  WhiskeyTypes.csv
data-engineer-derec/tests/: test_exporters.py
