[tool.poetry]
name = "derec"
version = "0.1.0"
description = ""
authors = ["Michał Poręba <michalporeba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0"
pytest = "^7.4.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
